--- a/packages/admin-next/dashboard/package.json
+++ b/packages/admin-next/dashboard/package.json
@@ -22,6 +22,7 @@
     "@medusajs/icons": "workspace:^",
     "@medusajs/ui": "workspace:^",
     "@radix-ui/react-collapsible": "1.0.3",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@tanstack/react-query": "4.22.0",
     "@tanstack/react-table": "8.10.7",
     "@uiw/react-json-view": "2.0.0-alpha.10",
@@ -43,13 +44,14 @@
     "@medusajs/types": "workspace:^",
     "@medusajs/ui-preset": "workspace:^",
     "@medusajs/vite-plugin-extension": "workspace:^",
+    "@types/node": "^20.11.15",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.16",
     "postcss": "8.4.32",
     "prettier": "^3.1.1",
-    "tailwindcss": "3.3.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.2.2",
     "vite": "5.0.10"
   },
