--- a/packages/payment-stripe/package.json
+++ b/packages/payment-stripe/package.json
@@ -19,39 +19,26 @@
   "scripts": {
     "prepublishOnly": "cross-env NODE_ENV=production tsc --build",
     "test": "jest --passWithNoTests src",
-    "build": "rimraf dist && tsc -p ./tsconfig.server.json && medusa-admin bundle",
+    "build": "rimraf dist && tsc -p ./tsconfig.json",
     "watch": "tsc --watch"
   },
   "devDependencies": {
-    "@medusajs/admin": "^7.1.10",
     "@medusajs/medusa": "^1.19.1",
-    "@tanstack/react-table": "^8.7.9",
     "@types/stripe": "^8.0.417",
     "awilix": "^8.0.1",
     "cross-env": "^5.2.1",
     "jest": "^25.5.4",
-    "medusa-react": "^9.0.13",
     "rimraf": "^5.0.1",
     "typescript": "^4.9.5"
   },
-  "peerDependenciesMeta": {
-    "@tanstack/react-table": {
-      "optional": true
-    },
-    "medusa-react": {
-      "optional": true
-    }
-  },
   "peerDependencies": {
-    "@medusajs/medusa": "^1.12.0",
-    "@tanstack/react-table": "^8.7.9",
-    "medusa-react": "^9.0.0"
+    "@medusajs/medusa": "^1.12.0"
   },
   "dependencies": {
     "@medusajs/utils": "^1.11.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "stripe": "^11.10.0"
+    "stripe": "latest"
   },
   "gitHead": "81a7ff73d012fda722f6e9ef0bd9ba0232d37808",
   "keywords": [
