--- a/packages/payment-stripe/tsconfig.json
+++ b/packages/payment-stripe/tsconfig.json
@@ -20,7 +20,8 @@
     "noImplicitThis": true,
     "allowJs": true,
     "skipLibCheck": true,
-    "downlevelIteration": true // to use ES5 specific tooling
+    "downlevelIteration": true, // to use ES5 specific tooling
+    "inlineSourceMap": true /* Emit a single file with source maps instead of having a separate file. */
   },
   "include": ["src"],
   "exclude": [
