--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@medusajs/types": "^1.11.11",
+    "@medusajs/modules-sdk": "^1.12.7",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
     "@mikro-orm/postgresql": "5.9.7",
