--- a/.github/workflows/generate-docblocks.yml
+++ b/.github/workflows/generate-docblocks.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  generate:
+  generate-tsdocs:
     if: github.event_name == 'workflow_dispatch' || (startsWith(github.head_ref, 'changeset-release/develop') && github.event.pull_request.merged == true)
     name: Generated TSDoc PRs
     runs-on: ubuntu-latest
@@ -34,7 +34,7 @@ jobs:
         working-directory: docs-util
 
       - name: Run docblock generator
-        run: "yarn start run:release"
+        run: "yarn start run:release --type docs"
         working-directory: docs-util/packages/docblock-generator
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
